# foyerdir

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
benchmark/: build.gradle.kts
benchmark/com.github.mccullocht.foyerdir.benchmark.GroupVIntBenchmark.benchFoyerDirectoryInputs_readGroupVInt-Throughput-size-64/: flame-cpu-forward.html  flame-cpu-reverse.html
benchmark/src/jmh/java/com/github/mccullocht/foyerdir/benchmark/: GroupVIntBenchmark.java  PostingIndexInputBenchmark.java
buildSrc/src/main/kotlin/: RustCdylibExtension.kt  rust-cdylib.gradle.kts
native/: Cargo.toml
native/src/: lib.rs
src/main/java/com/github/mccullocht/foyerdir/: FoyerDir.java  FoyerDirectory.java  FoyerDirectoryBindings.java  FoyerIndexInput.java  FoyerIndexOutput.java
src/test/java/com/github/mccullocht/foyerdir/: FoyerDirectoryTest.java
