[package]
name = "foyerdir"
version = "0.1.0"
edition = "2024"

[lib]
name = "foyerdir"
crate-type = ["cdylib"]

[dev-dependencies]
tempfile = "3"

[dependencies]
aligned-vec = "0.6.4"
crc = "3.4.0"
foyer = "0.22.3"
futures = "0.3.32"
libc = "0.2"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
